--- a/next-mongo/package.json
+++ b/next-mongo/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "mongodb": "^4.0.0",
     "mongoose": "^5.13.3",
     "next": "10.2.0",
     "next-auth": "^3.27.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
