--- a/shopping-cart/package.json
+++ b/shopping-cart/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@chec/commerce.js": "^2.7.2",
+    "@material-ui/core": "^4.12.1",
     "next": "11.0.1",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.3.0",
     "eslint": "7.30.0",
-    "eslint-config-next": "11.0.1"
+    "eslint-config-next": "11.0.1",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4"
   }
 }
